[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dearpygui"
dynamic = ["version"]
description = "DearPyGui: A simple Python GUI Toolkit"
requires-python = ">= 3.7"
authors = [
    { name = "Jonathan Hoffstadt", email = "jonathanhoffstadt@yahoo.com" },
    { name = "Preston Cothren" },
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/hoffstadt/DearPyGui"

# note done python -m build --wheel  obtain platform specific wheel